# Isaac-GR00T

./: .gitignore
examples/H20/robots/gripper/h2x/: CMakeLists.txt  LICENSE  package.xml
examples/H20/robots/gripper/h2x/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
examples/H20/robots/gripper/h2x/install/h2x/share/h2x/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
examples/H20/robots/gripper/h2x/install/h2x/share/h2x/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_h2x__rosidl_generator_cExport-noconfig.cmake  export_h2x__rosidl_generator_cExport.cmake  export_h2x__rosidl_generator_cppExport.cmake  export_h2x__rosidl_generator_pyExport-noconfig.cmake  export_h2x__rosidl_generator_pyExport.cmake  export_h2x__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_h2x__rosidl_typesupport_fastrtps_cExport.cmake  export_h2x__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_h2x__rosidl_typesupport_fastrtps_cppExport.cmake  h2xConfig.cmake  h2x__rosidl_typesupport_cExport-noconfig.cmake  h2x__rosidl_typesupport_cExport.cmake  h2x__rosidl_typesupport_cppExport-noconfig.cmake  h2x__rosidl_typesupport_cppExport.cmake  h2x__rosidl_typesupport_introspection_cExport-noconfig.cmake  h2x__rosidl_typesupport_introspection_cExport.cmake  h2x__rosidl_typesupport_introspection_cppExport-noconfig.cmake  h2x__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
examples/H20/robots/gripper/h2x/install/h2x/share/h2x/msg/: BatteryState.idl  BatteryState.json  CDUState.idl  CDUState.json  CDUState.msg  DebugCDUState.idl  DebugCDUState.json  DebugIMUState.idl  DebugIMUState.json  DebugMotorState.idl  DebugMotorState.json  (+38 more)
examples/H20/robots/gripper/h2x/msg/: BatteryState.msg  DebugCDUState.msg  DebugIMUState.msg  DebugMotorState.msg  Diagnosis.msg  GripperCmd.msg  GripperDiagnosis.msg  GripperDiagnosticData.msg  LRCUCmd.msg  LowCmdLRCU.msg  LowCmdTekkend.msg  LowState.msg  LowStateLRCU.msg  LowStateTekkend.msg  MotorCmd.msg  MotorCmdGripper.msg  MotorState.msg  PCUState.msg
examples/H20/robots/gripper/h2x/srv/: ClearError.srv  ConfigMotorId.srv  GetJointHardLimit.srv  GetJointHardLimitPosition.srv  GetJointMonitor.srv  GetVersion.srv  IMUGyroZeroBiasCalibrtion.srv  SetGripperMaxForce.srv  SetLowBatteryThreshold.srv  TekkendGetDriverVersion.srv  TekkendGetMaxForce.srv  TekkendSetStrokeRange.srv
examples/H20/robots/sdk_package/example/: CMakeLists.txt  build.sh
examples/H20/robots/sdk_package/example/h10-w/: CMakeLists.txt
examples/H20/robots/sdk_package/example/h10-w/chassis/: CMakeLists.txt  base_control.cpp  chassis_max_vel.cpp  get_chassis_speed.cpp  get_localization.cpp  get_odometry_message.cpp  set_localization.cpp  speed_chassis.cpp
examples/H20/robots/sdk_package/example/h10-w/low_level/: CMakeLists.txt  low_cmd.cpp
examples/H20/robots/sdk_package/example/h10-w/motion/: CMakeLists.txt  control_policy.cpp  linear_move.cpp  multi_joints_move.cpp  safe_mode.cpp  servo_joint.cpp  servo_linear.cpp  single_joint_move.cpp  speed_joint.cpp  speed_linear.cpp
examples/H20/robots/sdk_package/example/h10-w/params/: CMakeLists.txt  forward_kinematics.cpp  get_cartesian_rotation_max_acc.cpp  get_cartesian_rotation_max_vel.cpp  get_cartesian_translation_max_acc.cpp  get_cartesian_translation_max_vel.cpp  get_joint_max_acc.cpp  get_joint_max_vel.cpp  get_joint_soft_limit.cpp  get_mech_cart_rot_max_acc.cpp  get_mech_cart_rot_max_vel.cpp  get_mech_cart_trans_max_acc.cpp  get_mech_cart_trans_max_vel.cpp  get_mech_joint_limit.cpp  get_mech_joint_max_acc.cpp  get_mech_joint_max_vel.cpp  get_tcp_offset.cpp  get_tcp_payload.cpp  inverse_kinematics.cpp  set_cartesian_rotation_max_acc.cpp  set_cartesian_rotation_max_vel.cpp  set_cartesian_translation_max_acc.cpp  set_cartesian_translation_max_vel.cpp  set_joint_max_acc.cpp  set_joint_max_vel.cpp  set_joint_soft_limit.cpp  set_tcp_offset.cpp  set_tcp_payload.cpp
examples/H20/robots/sdk_package/example/h10-w/status/: CMakeLists.txt  get_controller_message.cpp  get_error_message.cpp  get_move_message.cpp
examples/H20/robots/sdk_package/example/h10-w/system/: CMakeLists.txt  calibrate_90deg_pos.cpp  calibrate_mech_zero_pos.cpp  clear_error.cpp  control_brake.cpp  control_power.cpp  enable_controller.cpp  get_version.cpp  microphone_status.cpp  speaker_status.cpp
examples/H20/robots/sdk_package/example/h2x/: CMakeLists.txt
examples/H20/robots/sdk_package/example/h2x/high_level/: CMakeLists.txt  climb_stairs_mode.cpp  damp_mode.cpp  dance.cpp  dance_mode.cpp  get_robot_mode.cpp  lock_stand_mode.cpp  move.cpp  realtime_move.cpp  rise.cpp  sit_down.cpp  squat_down.cpp  squat_up.cpp  stop_move.cpp  walk_on_terrain_mode.cpp  walk_run_mode.cpp  zero_torque_mode.cpp
examples/H20/robots/sdk_package/example/h2x/low_level/: CMakeLists.txt  low_cmd.cpp  low_state.cpp  lrcu_cmd.cpp  lrcu_state.cpp
examples/H20/robots/sdk_package/example/h2x/system/: CMakeLists.txt  calibrate_mech_zero_pos.cpp  clear_error.cpp  enable_controller.cpp  get_version.cpp  microphone_status.cpp  speaker_status.cpp
(+1919 files in other folders)
